--- a/explore.html
+++ b/explore.html
@@ -8,11 +8,11 @@
 
     <title>Thank you Heavenly Father</title>
 
-    <link href="../../youthalive/css/w3.css" rel="stylesheet" />
+    <link href="css/w3.css" rel="stylesheet" />
 
-    <link href="../../youthalive/css/responsive.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
 
-    <link href="../../youthalive/fa/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="fa/css/font-awesome.min.css" rel="stylesheet" />
 
     <style>
 
