--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Thank you Father | Afei</title>
-    <link href="../../youthalive/css/w3.css" rel="stylesheet" />
-    <link href="../../youthalive/css/responsive.css" rel="stylesheet" />
+    <link href="css/w3.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
     <style>
 
         main {
