Fixed Player unknown issues in explore.html

--- a/explore.html
+++ b/explore.html
@@ -224,8 +224,6 @@
         }
     </style>
 
-    <script src="music_functions.js"></script>
-
     <script>
 
         var p_n_o_e = 3;
@@ -376,7 +374,7 @@
 
 <body onload="entry(1)">
 
-<footer>
+<footer id="player">
 
     <div id="close_btn"><i class="fa fa-close" onclick="hidePlayer()"></i></div>
 
@@ -444,6 +442,9 @@
 </nav>
 
 </body>
+
+
+<script src="music_functions.js"></script>
 
 <script src="../biggerThan.js"></script>
 
