--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 		<link href="css/responsive.css" rel="stylesheet" />
 		<link href="css/w3.css" rel="stylesheet" />
 		<link href="css/shadow.css" rel="stylesheet" />
-		<Link href="../../opinion/css/fa/css/font-awesome.min.css" rel="stylesheet" />
+		<Link href="css/fa/css/font-awesome.min.css" rel="stylesheet" />
         <script src="scripts/functions.js"></script>
         <script src="scripts/own.js"></script>
         <script>
