--- a/search.html
+++ b/search.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
-    <link href="../../youthalive/css/w3.css" rel="stylesheet" />
-    <link href="../../youthalive/css/responsive.css" rel="stylesheet" />
-    <link href="../../youthalive/fa/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/w3.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="fa/css/font-awesome.min.css" rel="stylesheet" />
     <link href="play_one.css" rel="stylesheet" />
     <script src="music_functions.js"></script>
     <script>
