--- a/explore.html
+++ b/explore.html
@@ -16,6 +16,14 @@
 
     <style>
 
+        li {
+            list-style-type: none;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
         nav {
             display: flex;
             align-content: center;
@@ -34,6 +42,17 @@
         nav ul {
             display: flex;
             align-items: center;
+        }
+
+        .navbar {
+            display: flex;
+            height: 50px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navbar li a {
+            padding: 16px 12px;
         }
 
         aside div a {
