--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="css/responsive.css" rel="stylesheet" />
     <style>
 
+        li {
+            list-style-type: none;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
         main {
             display: flex;
             flex-wrap: wrap;
@@ -32,6 +40,14 @@
         }
 
         .navbar {
+            display: flex;
+            height: 50px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navbar li a {
+            padding: 16px 12px;
         }
 
         .navbar li a:hover {
