--- a/search.html
+++ b/search.html
@@ -7,6 +7,33 @@
     <link href="css/responsive.css" rel="stylesheet" />
     <link href="fa/css/font-awesome.min.css" rel="stylesheet" />
     <link href="play_one.css" rel="stylesheet" />
+    <style>
+        li {
+            list-style-type: none;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .navbar {
+            display: flex;
+            height: 50px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navbar li a {
+            padding: 16px 12px;
+        }
+
+        .navbar li a:hover {
+            border-radius: 0;
+            background-color: rgba(255, 255, 255, 0.7);
+        }
+
+
+    </style>
     <script src="music_functions.js"></script>
     <script>
         var found = {};
